RESOLVED FIXED55256
Chromium: missing handle scope in V8InjectedScriptHostCustom.
https://bugs.webkit.org/show_bug.cgi?id=55256
Summary Chromium: missing handle scope in V8InjectedScriptHostCustom.
Pavel Feldman
Reported 2011-02-25 13:48:43 PST
Attachments
WebKit Review Bot
Comment 1 2011-02-25 17:16:04 PST
http://trac.webkit.org/changeset/79726 might have broken GTK Linux 32-bit Release and GTK Linux 32-bit Debug
Pavel Feldman
Comment 2 2011-02-28 03:19:52 PST
Landed as r79726.
Note You need to log in before you can comment on or make changes to this bug.