2011-02-25  Pavel Feldman  <pfeldman@chromium.org>

Not reviewed: added missing handle scope into V8InjectedScriptHostCustom.
        https://bugs.webkit.org/show_bug.cgi?id=55256

        * bindings/v8/custom/V8InjectedScriptHostCustom.cpp:
        (WebCore::InjectedScriptHost::nodeAsScriptValue):
        (WebCore::V8InjectedScriptHost::currentCallFrameCallback):


Canonical link: https://commits.webkit.org/69644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@79726 268f45cc-cd09-0410-ab3c-d52691b4dbfc